# neil-mariadb

./: LICENSE  Makefile  README.md  pyproject.toml
src/neil/: __init__.py  data.py  defaults.py  neil.py  utils.py
tests/: constants.py  test_data.py  test_neilpool.py
