[project]
name = "neil"
version = "0.2.1"
description = "Execute SQL scripts through MariaDB with captured output."
readme = "README.md"
authors = [
    { name = "avgra3", email = "antonygradillas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mariadb>=1.1.14, <2.0.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.60",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
    "integration",
]
